[package]
name = "myos"
version = "0.1.0"
edition = "2021"
authors = ["Yulong<baiyulong2009@hotmail.com"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 300 # (in seconds)

[dependencies]
bootloader = "0.9.21"
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.7"
uart_16550 = "0.2.16"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false
